@@ -8,6 +8,7 @@
 * Fix - Fixed post author when 'get_the_author' is not available
 * Fix - Fixed breadcrumb display position on archive.php, author.php and search.php
 * Fix - Small issue (style) with Pagenavi pagination
+* Fix - Fixed CSS enqueue (parent > child themes)
 
 ### 1.8.4
 * Fix - Re-added the get_comments_number() fix
